# AeroSimX

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/cpp/: CMakeLists.txt  basic_sim.cpp  vehicle_control.cpp
examples/python/: basic_flight.py  dataset_generation.py
include/aerosimx/: aerosimx.hpp
include/aerosimx/control/: control_api.hpp
include/aerosimx/core/: entity_manager.hpp  event_system.hpp  simulation.hpp  time_manager.hpp  types.hpp
include/aerosimx/physics/: physics_engine.hpp
include/aerosimx/rendering/: visualizer_interface.hpp
include/aerosimx/scenario/: scenario_manager.hpp
include/aerosimx/sensors/: camera.hpp  gps.hpp  imu.hpp  lidar.hpp  radar.hpp  sensor_base.hpp
include/aerosimx/vehicles/: car.hpp  multirotor.hpp  vehicle_base.hpp
pyaerosimx/: __init__.py  client.py  datasets.py  sensors.py  vehicles.py
ros2/aerosimx_bridge/: CMakeLists.txt  package.xml
ros2/aerosimx_bridge/config/: bridge_config.yaml
ros2/aerosimx_bridge/launch/: aerosimx_bridge.launch.py
ros2/aerosimx_bridge/src/: aerosimx_bridge_node.cpp
src/bindings/: python_bindings.cpp
src/control/: command_queue.cpp
src/core/: entity_manager.cpp  event_system.cpp  simulation.cpp  time_manager.cpp
src/physics/: collision_system.cpp  physics_engine.cpp  physics_world.cpp  rigid_body.cpp
src/scenario/: scenario_manager.cpp
src/sensors/: lidar.cpp  sensor_base.cpp
src/vehicles/: multirotor.cpp  vehicle_base.cpp
tests/cpp/: CMakeLists.txt  benchmark_physics.cpp  test_integration.cpp
tests/python/: test_client.py  test_integration.py  test_sensors.py
