[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10", "cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaerosimx"
version = "0.1.0"
description = "Advanced Autonomous Robotics Simulation Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AeroSimX Team", email = "contact@aerosimx.io"}
]
keywords = [
    "simulation",
    "robotics",
    "autonomous",
    "drone",
    "vehicle",
    "reinforcement-learning",
    "computer-vision",
    "ros2"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
ml = [
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "tensorboard>=2.14.0",
]
cv = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scikit-image>=0.21.0",
]
ros = [
    # ROS2 dependencies are typically installed via apt/rosdep
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "breathe>=4.35.0",
    "myst-parser>=2.0.0",
]
all = [
    "pyaerosimx[dev,ml,cv,docs]",
]

[project.urls]
Homepage = "https://github.com/ismailtasdelen/AeroSimX"
Documentation = "https://aerosimx.readthedocs.io"
Repository = "https://github.com/ismailtasdelen/AeroSimX"
Issues = "https://github.com/ismailtasdelen/AeroSimX/issues"

[project.scripts]
aerosimx = "pyaerosimx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyaerosimx*"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["pyaerosimx"]

[tool.black]
line-length = 100
target-version = ["py39"]
